# org.apps.popuptilelauncher

./: .gitignore  LICENSE  README.md  install-uninstall.sh  metadata.json
contents/config/: Utils.qml  config.qml
contents/config/kconfig/: popup_tile_launcher.kcfg  popup_tile_launcher.kcfgc
contents/ui/: DesktopPicker.qml  EditDialog.qml  IconPicker.qml  Settings.qml  TileGrid.qml  TileItem.qml  main.qml
helper/: CMakeLists.txt  PlasmaHelper.cpp  PlasmaHelper.h  main.cpp
launcher/: CMakeLists.txt  HelperBridge.cpp  HelperBridge.h  HelperPlugin.cpp  HelperPlugin.h  Launcher.cpp  Launcher.h  main.cpp  resources.qrc
launcher/imports/org/apps/launcher/: qmldir
launcher/imports/org/kde/plasma/plasmoid/: Plasmoid.qml  PlasmoidItem.qml  qmldir
